<resources>
  <string name="app_name">Favorite-Android</string>
  <string name="home_page">首页</string>
  <string name="http_test">HTTP 协议通讯</string>
  <string name="test_keyboard">测试键盘顶起布局</string>
  <string name="get_weather">获取天气</string>
  <string name="get_location">获取定位信息</string>
  <string name="login">登陆</string>
  <string name="user_name">用户名</string>
  <string name="password">密码</string>
  <string name="add">添加</string>
  <string name="select">查询</string>
  
  <!-- 首页菜单 -->
  <string name="activity_launch">Activity启动模式</string>
  <string name="lunch_standard">默认模式</string>
  <string name="lunch_singleTop">栈顶复用</string>
  <string name="lunch_singleTask">栈内复用</string>
  <string name="lunch_singleInstance">全局单例模式</string>

  <string name="function_activity">功能 Activity</string>
  <string name="handle_test">Handle Test</string>
  <string name="room_test">Room Test</string>
  <string name="coroutine_test">协程示例</string>
  <string name="lambda_test">Lambda 示例</string>
</resources>