<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/btStandard"
    android:layout_width="160dp"
    android:layout_height="65dp"
    android:text="@string/lunch_standard"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/btSingleTop"
    android:layout_width="160dp"
    android:layout_height="65dp"
    android:text="@string/lunch_singleTop"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/btStandard" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/btSingleTask"
    android:layout_width="160dp"
    android:layout_height="65dp"
    android:text="@string/lunch_singleTask"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/btSingleTop" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/btSingleInstance"
    android:layout_width="160dp"
    android:layout_height="65dp"
    android:text="@string/lunch_singleInstance"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/btSingleTask" />

</androidx.constraintlayout.widget.ConstraintLayout>