<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/teal_200"
        app:title="@string/http_test"
        app:navigationIcon="@drawable/ic_arrow_left"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btGetWeather"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:text="@string/get_weather"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btGetLocation"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:text="@string/get_location"
        app:layout_constraintTop_toBottomOf="@id/btGetWeather"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>