<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@color/teal_200"
    app:layout_constraintTop_toTopOf="parent"
    app:navigationIcon="@drawable/ic_arrow_left"
    app:title="首页" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/btHttp"
    android:layout_width="200dp"
    android:layout_height="60dp"
    android:text="@string/http_test"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/toolbar" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/btTestKeyboard"
    android:layout_width="200dp"
    android:layout_height="60dp"
    android:text="@string/http_test"
    app:layout_constraintStart_toStartOf="@id/btHttp"
    app:layout_constraintTop_toBottomOf="@id/btHttp" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/btHandleTest"
    android:layout_width="200dp"
    android:layout_height="60dp"
    android:text="@string/handle_test"
    app:layout_constraintStart_toStartOf="@id/btTestKeyboard"
    app:layout_constraintTop_toBottomOf="@id/btTestKeyboard" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/btRoomTest"
    android:layout_width="200dp"
    android:layout_height="60dp"
    android:text="@string/room_test"
    app:layout_constraintStart_toStartOf="@id/btTestKeyboard"
    app:layout_constraintTop_toBottomOf="@id/btHandleTest" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/btCoroutineTest"
    android:layout_width="200dp"
    android:layout_height="60dp"
    android:text="@string/coroutine_test"
    app:layout_constraintStart_toStartOf="@id/btTestKeyboard"
    app:layout_constraintTop_toBottomOf="@id/btRoomTest" />

</androidx.constraintlayout.widget.ConstraintLayout>