<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@color/teal_200"
    app:title="首页"
    app:navigationIcon="@drawable/ic_arrow_left"
    app:layout_constraintTop_toTopOf="parent"/>

  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/tvUserName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="48dp"
    android:text="@string/user_name"
    android:textSize="24sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/toolbar" />


  <androidx.appcompat.widget.AppCompatEditText
    android:id="@+id/etUserName"
    android:layout_width="0dp"
    android:layout_height="80dp"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="88dp"
    app:layout_constraintTop_toTopOf="@id/tvUserName"
    app:layout_constraintBottom_toBottomOf="@id/tvUserName"
    app:layout_constraintStart_toEndOf="@id/tvUserName"
    app:layout_constraintEnd_toEndOf="parent"/>

  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/tvPassword"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="56dp"
    android:text="@string/password"
    android:textSize="24sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/etUserName" />


  <androidx.appcompat.widget.AppCompatEditText
    android:id="@+id/etPassword"
    android:layout_width="0dp"
    android:layout_height="80dp"
    android:layout_marginEnd="88dp"
    app:layout_constraintTop_toTopOf="@id/tvPassword"
    app:layout_constraintBottom_toBottomOf="@id/tvPassword"
    app:layout_constraintStart_toStartOf="@id/etUserName"
    app:layout_constraintEnd_toEndOf="parent"/>

  <Button
    android:id="@+id/btAdd"
    android:layout_width="120dp"
    android:layout_height="60dp"
    android:layout_marginTop="24dp"
    android:text="@string/add"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/etPassword"/>

  <Button
    android:id="@+id/btSelect"
    android:layout_width="120dp"
    android:layout_height="60dp"
    android:layout_marginTop="24dp"
    android:text="@string/select"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/btAdd"/>

</androidx.constraintlayout.widget.ConstraintLayout>